// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LoadingOverlay should not render markup when isOpen is not provided 1`] = `
<LoadingOverlay
  backgroundStyle="light"
  isAnimated={false}
  isOpen={false}
  isRelativeToContainer={false}
  rootSelector="#root"
>
  <Overlay
    aria-live="polite"
    backgroundStyle="light"
    className="loading-overlay"
    isOpen={false}
    isRelativeToContainer={false}
    isScrollable={false}
    rootSelector="#root"
    zIndex="100"
  />
</LoadingOverlay>
`;

exports[`LoadingOverlay when isOpen is provided should render with message prop 1`] = `
<LoadingOverlay
  backgroundStyle="light"
  isAnimated={false}
  isOpen={true}
  isRelativeToContainer={false}
  message="Loading!"
  rootSelector="#root"
>
  <Overlay
    aria-live="polite"
    backgroundStyle="light"
    className="loading-overlay"
    isOpen={true}
    isRelativeToContainer={false}
    isScrollable={false}
    rootSelector="#root"
    zIndex="100"
  >
    <Portal>
      <Portal
        containerInfo={
          <div>
            <div
              class="background-scroll-content"
            >
              <div
                class="inner"
              />
            </div>
            <div>
              <div
                aria-live="polite"
                class="overlay fullscreen light layer-100 loading-overlay"
                tabindex="0"
              >
                <div
                  class="content"
                >
                  <svg
                    class="tui-Icon icon icon"
                    data-name="Layer 1"
                    focusable="false"
                    height="36"
                    viewBox="0 0 48 48"
                    width="36"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <title />
                    <path
                      d="M24 0a3.8 3.8 0 11-3.8 3.8A3.8 3.8 0 0124 0zm0 40.4a3.8 3.8 0 11-3.8 3.8 3.8 3.8 0 013.8-3.8zm20.2-20.2a3.8 3.8 0 11-3.8 3.8 3.8 3.8 0 013.8-3.8zm-40.4 0A3.8 3.8 0 110 24a3.8 3.8 0 013.8-3.8zM38.3 5.9a3.8 3.8 0 11-3.8 3.8 3.8 3.8 0 013.8-3.8zM9.7 34.5a3.8 3.8 0 11-3.8 3.8 3.8 3.8 0 013.8-3.8zm0-28.6a3.8 3.8 0 11-3.8 3.8 3.8 3.8 0 013.8-3.8zm28.6 28.6a3.8 3.8 0 11-3.8 3.8 3.8 3.8 0 013.8-3.8z"
                    />
                  </svg>
                  <div
                    class="message"
                  >
                    Loading!
                  </div>
                </div>
              </div>
            </div>
          </div>
        }
      >
        <div
          className="background-scroll-content"
        >
          <div
            className="inner"
          />
        </div>
        <FocusTrap
          _createFocusTrap={[Function]}
          active={true}
          focusTrapOptions={Object {}}
          paused={false}
        >
          <div>
            <div
              aria-live="polite"
              className="overlay fullscreen light layer-100 loading-overlay"
              onClick={[Function]}
              tabIndex="0"
            >
              <div
                className="content"
              >
                <IconSpinner
                  className="icon"
                  data-name="Layer 1"
                  height="36"
                  isSpin={false}
                  viewBox="0 0 48 48"
                  width="36"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <IconBase
                    className="icon"
                    data-name="Layer 1"
                    focusable="false"
                    height="36"
                    isBidi={false}
                    isSpin={false}
                    viewBox="0 0 48 48"
                    width="36"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <svg
                      className="tui-Icon icon icon"
                      data-name="Layer 1"
                      focusable="false"
                      height="36"
                      viewBox="0 0 48 48"
                      width="36"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <title />
                      <path
                        d="M24 0a3.8 3.8 0 11-3.8 3.8A3.8 3.8 0 0124 0zm0 40.4a3.8 3.8 0 11-3.8 3.8 3.8 3.8 0 013.8-3.8zm20.2-20.2a3.8 3.8 0 11-3.8 3.8 3.8 3.8 0 013.8-3.8zm-40.4 0A3.8 3.8 0 110 24a3.8 3.8 0 013.8-3.8zM38.3 5.9a3.8 3.8 0 11-3.8 3.8 3.8 3.8 0 013.8-3.8zM9.7 34.5a3.8 3.8 0 11-3.8 3.8 3.8 3.8 0 013.8-3.8zm0-28.6a3.8 3.8 0 11-3.8 3.8 3.8 3.8 0 013.8-3.8zm28.6 28.6a3.8 3.8 0 11-3.8 3.8 3.8 3.8 0 013.8-3.8z"
                      />
                    </svg>
                  </IconBase>
                </IconSpinner>
                <div
                  className="message"
                >
                  Loading!
                </div>
              </div>
            </div>
          </div>
        </FocusTrap>
      </Portal>
    </Portal>
  </Overlay>
</LoadingOverlay>
`;

exports[`LoadingOverlay when isOpen is provided the default LoadingOverlay should render a default component 1`] = `
<LoadingOverlay
  backgroundStyle="light"
  isAnimated={false}
  isOpen={true}
  isRelativeToContainer={false}
  rootSelector="#root"
>
  <Overlay
    aria-live="polite"
    backgroundStyle="light"
    className="loading-overlay"
    isOpen={true}
    isRelativeToContainer={false}
    isScrollable={false}
    rootSelector="#root"
    zIndex="100"
  >
    <Portal>
      <Portal
        containerInfo={
          <div>
            <div
              class="background-scroll-content"
            >
              <div
                class="inner"
              />
            </div>
            <div>
              <div
                aria-live="polite"
                class="overlay fullscreen light layer-100 loading-overlay"
                tabindex="0"
              >
                <div
                  class="content"
                >
                  <svg
                    class="tui-Icon icon icon"
                    data-name="Layer 1"
                    focusable="false"
                    height="36"
                    viewBox="0 0 48 48"
                    width="36"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <title />
                    <path
                      d="M24 0a3.8 3.8 0 11-3.8 3.8A3.8 3.8 0 0124 0zm0 40.4a3.8 3.8 0 11-3.8 3.8 3.8 3.8 0 013.8-3.8zm20.2-20.2a3.8 3.8 0 11-3.8 3.8 3.8 3.8 0 013.8-3.8zm-40.4 0A3.8 3.8 0 110 24a3.8 3.8 0 013.8-3.8zM38.3 5.9a3.8 3.8 0 11-3.8 3.8 3.8 3.8 0 013.8-3.8zM9.7 34.5a3.8 3.8 0 11-3.8 3.8 3.8 3.8 0 013.8-3.8zm0-28.6a3.8 3.8 0 11-3.8 3.8 3.8 3.8 0 013.8-3.8zm28.6 28.6a3.8 3.8 0 11-3.8 3.8 3.8 3.8 0 013.8-3.8z"
                    />
                  </svg>
                  <div
                    class="message"
                  >
                    Terra.Overlay.loading
                  </div>
                </div>
              </div>
            </div>
          </div>
        }
      >
        <div
          className="background-scroll-content"
        >
          <div
            className="inner"
          />
        </div>
        <FocusTrap
          _createFocusTrap={[Function]}
          active={true}
          focusTrapOptions={Object {}}
          paused={false}
        >
          <div>
            <div
              aria-live="polite"
              className="overlay fullscreen light layer-100 loading-overlay"
              onClick={[Function]}
              tabIndex="0"
            >
              <div
                className="content"
              >
                <IconSpinner
                  className="icon"
                  data-name="Layer 1"
                  height="36"
                  isSpin={false}
                  viewBox="0 0 48 48"
                  width="36"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <IconBase
                    className="icon"
                    data-name="Layer 1"
                    focusable="false"
                    height="36"
                    isBidi={false}
                    isSpin={false}
                    viewBox="0 0 48 48"
                    width="36"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <svg
                      className="tui-Icon icon icon"
                      data-name="Layer 1"
                      focusable="false"
                      height="36"
                      viewBox="0 0 48 48"
                      width="36"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <title />
                      <path
                        d="M24 0a3.8 3.8 0 11-3.8 3.8A3.8 3.8 0 0124 0zm0 40.4a3.8 3.8 0 11-3.8 3.8 3.8 3.8 0 013.8-3.8zm20.2-20.2a3.8 3.8 0 11-3.8 3.8 3.8 3.8 0 013.8-3.8zm-40.4 0A3.8 3.8 0 110 24a3.8 3.8 0 013.8-3.8zM38.3 5.9a3.8 3.8 0 11-3.8 3.8 3.8 3.8 0 013.8-3.8zM9.7 34.5a3.8 3.8 0 11-3.8 3.8 3.8 3.8 0 013.8-3.8zm0-28.6a3.8 3.8 0 11-3.8 3.8 3.8 3.8 0 013.8-3.8zm28.6 28.6a3.8 3.8 0 11-3.8 3.8 3.8 3.8 0 013.8-3.8z"
                      />
                    </svg>
                  </IconBase>
                </IconSpinner>
                <FormattedMessage
                  id="Terra.Overlay.loading"
                >
                  <div
                    className="message"
                  >
                    Terra.Overlay.loading
                  </div>
                </FormattedMessage>
              </div>
            </div>
          </div>
        </FocusTrap>
      </Portal>
    </Portal>
  </Overlay>
</LoadingOverlay>
`;
